# rusty-toyspice

./: .gitignore  Cargo.toml  Makefile  README.md
netlist_test/: netlist
src/: elements.rs  main.rs  matrix.rs  netlist.rs
