[package]
name = "rusty-spice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"]}
serde_json = "1.0"
approx = "0.5.1"
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["intel-mkl"] }
num-complex = "0.4"
anyhow = "1.0.58"
